--- a/estilo.css
+++ b/estilo.css
@@ -3,8 +3,9 @@
     height: 50px;
     background-color: black;
     color: white;
-    display: flex;
     line-height: normal;
+    font-size: 18pt;
+    text-align: center;
 }
 .txt{
     float: left;
