--- a/estilo.css
+++ b/estilo.css
@@ -24,3 +24,8 @@
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+@media (max-width:900px) {
+    .table,.header,.txt{
+        width: 100%;
+    } 
+}
