--- a/estilo.css
+++ b/estilo.css
@@ -1,16 +1,25 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}
+*{margin: 0; padding: 0; box-sizing: border-box; font-family: Georgia, 'Times New Roman', Times, serif;}
 .lista{
     float: left;
     width: 40%;
 }
+.titulo{
+    width: 100%;
+    background-color: rg(119, 11, 190);
+    text-align: center;
+    padding: 5px;
+    color: black;
+    border: 2px solid black;
+}
 .header{
     width: 100%;
-    height: 30px;
+    height: 50px;
     background-color: black;
     color: white;
     line-height: normal;
     font-size: 18pt;
     text-align: center;
+    line-height: 50px;
 }
 .txt{
     float: left;
@@ -19,16 +28,14 @@
     font-size: 13pt;
     width: 50%;
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
 .table{
     color: white;
-    width: 1000%;
+    width: 100%;
     background-color: rgb(119, 11, 190);
     text-align: center;
     font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .contaner{
     width: 95%;
@@ -36,9 +43,32 @@
 }
 .form{
     float: left;
-    width: 50%;
+    width: 55%;
     margin-left: 10px;
+    background-color: blue;
 }
+.form form{
+    float: left;
+    width: 40%;
+    padding: 5px;
+    background-color: gray;
+}
+.tabela{
+    float: left;
+    width: 60%;
+}
+.menu{
+    background-color: red;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+}
+.menu ul li{
+    display: inline;
+    margin-right:45px;
+    font-size: 15pt;
+}
+
 @media (max-width:1200px) {
     .lista{
         width: 100%;
